# OSVR-Ximmerse

./: .gitignore  CMakeLists.txt  README.md  net_demonixis_ximmerse.cpp  net_demonixis_ximmerse.json
Vendors/Ximmerse/include/: xdevice.h
Vendors/Ximmerse/libs/mac/xdevice.bundle/Contents/: Info.plist
Vendors/Ximmerse/libs/mac/xdevice.bundle/Contents/MacOS/: xdevice
Vendors/Ximmerse/samples/: main.cpp
cmake/: FindXimmerse.cmake
